--- a/index.html
+++ b/index.html
@@ -1,7 +1,92 @@
-<html>
-<title>First</title>
+<!doctype html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+
+  <title>Department of Computer Science & Engineering, CET</title>
+  <meta name="description" content="Official website of Department of Computer Science & Engineering">
+  <meta name="author" content="Web Team, CET">
+
+  <!--[if lt IE 9]>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- Google icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Latest compiled and minified CSS - Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head>
+
 <body>
-<h1>Repository</h1>
-<p>marana mass DB </p>
+
+  <div class="menuButtonContainer" id="mainMenuButton" onclick="menuButtonToggle(this); actionNav(this);">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+  </div>
+
+  <div id="mainMenu">
+      <h4 id="menuTitle">Menu</h4>
+      <a href="#" class="active">Home</a>
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <a href="#">Link 4</a>
+    </ul>
+    <!-- <div id="mainMenuSub">
+      Information for:
+    </div> -->
+  </div>
+
+  <div class="container-fluid" id="head">
+    <div id="mainContentOverlay">
+    </div>
+    <div class="row" id="headerRow">
+      <h4 id="headingDepartmentText">Department of Computer Science & Engineering</h4>
+      <h6 id="headingCollegeText">College of Engineering Trivandrum</h6>
+    </div>
+   </div>
+  <!--Body   -->  
+  
+  <div class="main text-center">
+    
+    <div class="tit">Profile</div>
+    <div class="con">Department of Computer Science and Engineering offers Undergraduate and Postgraduate programs in Computer Science and Engineering, Master of Computer Applications program, and a Doctoral degree program.
+
+The fast changing scenario in Information Technology necessitates the Department to actively extend its research and development activities. The current research interests of the Department include major areas of research in Computer Science.</div>
+    <hr />
+    <div class="tit">Vision and Mission</div>
+    <div class="con">VISION
+
+ To be a Centre of Excellence in the Discipline of Computing.
+
+MISSION
+
+To develop human resource with sound knowledge- theory and practical - in the discipline of computing and the ability to apply the knowledge to the benefit of the society at large.</div>
+    <hr/>
+    <div class="tit">History</div>
+    <div class="con">BTech programme in Computer Science and Engineering started in 1985 under the Department of Electrical Engineering. The Department of Computer Science and Engineering was formed in June 1997. The three-year MCA programme started in 1988. The two-year MTech programme in Computer Science and Engineering started in 1998. The two-year MTech programme in Computer Science and Engineering (Information Security) started in 2006. PhD programme started in 2002.</div>
+    
+  </div>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+  <!-- Latest compiled and minified JavaScript - Bootstrap -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+  <script src="js/common.js"></script>
+
 </body>
+
 </html>
